# fastapi-crash-course

./: main.py  pyproject.toml
api/: views.py
schemas/: user.py
