[tool.poetry]
name = "fastapi-crash-course"
version = "0.1.0"
description = ""
authors = ["Demos Petsas <demos@petsas.consulting>"]
readme = "README.md"
packages = [{include = "fastapi_crash_course"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
email-validator = "^2.0.0.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
